--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,17 @@
 {
-    "name": "simplesoftwareio/simple-qrcode",
-    "description": "Simple QrCode is a QR code generator made for Laravel.",
+    "name": "apexcode/qrcode",
+    "description": "QrCode is a QR code generator made for Laravel.",
     "keywords": ["qrcode", "laravel", "simple", "generator", "wrapper"],
-    "homepage": "https://www.simplesoftware.io/#/docs/simple-qrcode",
+    "homepage": "https://www.apexcode.dev/",
     "license" : "MIT",
     "authors": [
         {
             "name": "Simple Software LLC",
             "email": "support@simplesoftware.io"
+        },
+        {
+            "name": "APEXCODE",
+            "email": "support@apexcode.dev"
         }
     ],
     "require": {
